Added auth via Google account; refactoring
